# crab-cpp

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  main.cpp  xmake.lua
include/crab_cpp/: macros.h
src/: match.cppm  mod.cppm  option.cppm  panic.cppm  result.cppm  string.cppm  utf8proc_data.c
tests/: option.cpp  result.cpp  str.cpp  string.cpp
